--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.17.1",
     "jest": "^27.0.6",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "eslint": "^5.12.0"
