added scripts for docker

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "docker:build": "docker-compose build",
+    "docker:start": "source ./.env && docker-compose up"
   },
   "repository": {
     "type": "git",
